--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 export APPID=AKIDAEAvTqm0mNlxwiTgulU1MURBi3C8BPks
 export APPKEY=74p171jHeolX6SbaNLCxgQBvskQujMn3
+export IMAGEDOMAIN=http://csartapi.csart.com.cn:4200
+export DOMAIN=http://csartapi.csart.com.cn:1102
+export UPLOADDIR=/home/zhuangbiaoimg.haipaitv.cn
